# qualiluma

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
llmcqr/: __init__.py  __main__.py  config.py  main.py
llmcqr/checks/: __init__.py  base.py  endsline.py  llm_checker.py
llmcqr/configs/: config.yaml
qualiluma/: __init__.py  __main__.py  config.py  main.py
qualiluma/checks/: __init__.py  base.py  case_consistency.py  endsline.py  llm_based_checker.py  llm_simple_checker.py  pep_checker.py  variable_consistency.py
qualiluma/conf/: config.yaml
qualiluma/configs/: config.yaml
qualiluma/util/: __init__.py  config.py  io.py  llm.py  logs.py
tests/: test_base.py  test_config.py  test_llm.py  test_main.py
tests/examples/: bad_example_pep8.py
tests/examples/bad/: bad_naming.py  explanations.md  god_object.py  inconsistent_variables.py  inefficient_algorithms.py  overly_complex.py  pep8.py  security_issues.py
tests/examples/simple/: div0.py  spelling.py
